# pytest-expecter

./: .gitignore  .isort.cfg  .pycodestyle.ini  .pydocstyle.ini  .pylint.ini  .tool-versions  .travis.yml  .verchew.ini  CHANGELOG.md  LICENSE.md  Makefile  Pipfile  README.md  expecter.py  mkdocs.yml  pyproject.toml  pytest.ini  scent.py  setup.py  tox.ini
.github/workflows/: main.yml
docs/: checks.md  constants.md  custom.md  examples.md  fixtures.md  requirements.txt  usage.md
expecter/: __init__.py  plugin.py
tests/: conftest.py  test_comparison.py  test_containment.py  test_contents.py  test_custom_matchers.py  test_diff.py  test_equality.py  test_exceptions.py  test_expecter.py  test_identity.py  test_strings.py  test_types.py  test_unicode.py  utils.py
tests/docs/: test_readme.py
tests/unit/: test_expecter.py
