[tool.poetry]

name = "pytest-expecter"
version = "3.0"
description = "Better testing with expecter and pytest."

license = "BSD"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/pytest-expecter"
documentation = "https://pytest-expecter.readthedocs.io"
repository = "https://github.com/jacebrowning/pytest-expecter"

keywords = ["pytest", "testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
]

packages = [
    { include = "expecter" },
]

[tool.poetry.dependencies]

python = "^3.8"

[tool.poetry.dev-dependencies]

# Formatters
black = "19.10b0"
isort = "4.3.21"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"
types-setuptools = "*"

# Testing
pytest = "^6.2.5"
pytest-cov = "*"
pytest-describe = "^1.0"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^3.1.1"

# Documentation
mkdocs = "^1.2.3"
pygments = "*"
jinja2 = "~3.0.3"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.poetry.plugins.pytest11]

"pytest-expecter" = "expecter.plugin"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
